# opencl

./: .gitignore  CMakeLists.txt  README.md  TODO.md
.github/workflows/: windows.yml
opencl_algorithm/: CMakeLists.txt  opencl_helloworld.cpp  opencl_helloworld.hpp
opencl_algorithm/kernel/: hello_algorithm.cl
opencl_benchmark/: CMakeLists.txt  opencl_benchmark.cpp
opencl_interface/: CMakeLists.txt
opencl_interface/CL/: cl_ext.h  cl_ext_qcom.h
opencl_management/: CMakeLists.txt  README.md  TODO.md  opencl_management.cpp  opencl_management.hpp
opencl_management/kernel/: theseus.cl
opencl_test/: CMakeLists.txt  opencl_test.cpp
